Extract core classes to separate module

--- a/vbpd/vbpd-runtime/build.gradle
+++ b/vbpd/vbpd-runtime/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 ext {
     groupId = 'com.github.kirich1409'
-    artifactId = "viewbindingpropertydelegate-noreflection"
+    artifactId = "vbpd-runtime"
 }
 
 apply from: rootProject.file('publishing.gradle')
@@ -28,15 +28,12 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
         kotlinOptions.freeCompilerArgs +=
-                ['-module-name', "com.github.kirich1409.ViewBindingPropertyDelegate.noreflection"]
+                ['-module-name', "com.github.kirich1409.ViewBindingPropertyDelegate.runtime"]
     }
 }
 
 dependencies {
-    api project(":vbpd:vbpd-runtime")
     implementation rootProject.ext.dependencies.coreKtx
-    implementation rootProject.ext.dependencies.fragmentKtx
     compileOnly rootProject.ext.dependencies.viewBinding
     implementation rootProject.ext.dependencies.lifecycleCommonJava8
-    implementation rootProject.ext.dependencies.recyclerview
 }
