--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':sample'
 include ':vbpd:vbpd-full'
 include ':vbpd:vbpd-noreflection'
+include ':vbpd:vbpd-runtime'
 rootProject.name = "View Binding Delegate"
